--- a/bonus_skills/fullstack_web_dev_bootcamp/html_css_sections/css/style.css
+++ b/bonus_skills/fullstack_web_dev_bootcamp/html_css_sections/css/style.css
@@ -1,3 +1,18 @@
 h1 {
     color: cornflowerblue;
 }
+
+div {
+    background-color: darkcyan;
+    color: antiquewhite;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.list {
+    color: yellow;
+}
+
+#list_item_four {
+    color: green;
+    text-align: center;
+}
